chore: review open api files
- align tags in REMS openapi;
- REMS api supports only one file upload, thus will ours do the same;
- generify file upload endpoints to access binary file
- make API key and user id required
